finishing touches and style fixes
Fixed cases of text overflowing and other small css stuff

--- a/src/main/webapp/src/components/DrinkCard.css
+++ b/src/main/webapp/src/components/DrinkCard.css
@@ -40,4 +40,13 @@
 .ingredient-tag {
     font-size: .8rem !important;
     margin: 0 .15rem;
+    max-width:100%;
+
+}
+
+.ingredient-tag .p-chip-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width:10rem;
 }
