--- a/src/main/webapp/src/views/Details.css
+++ b/src/main/webapp/src/views/Details.css
@@ -74,6 +74,7 @@
     flex: 1 1 0;
     text-align: left;
     padding-left: 1rem;
+    overflow-y: auto;
 }
 
 .header h3{
